--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "moment-timezone": "^0.5.45",
-    "mysql2": "^3.9.7"
+    "mysql2": "^3.9.7",
+    "pg": "^8.11.5"
   }
 }
