--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "moment-timezone": "^0.5.45",
     "mysql2": "^3.9.7",
